# wikimedia

./: README.md  pyproject.toml
src/wikimedia/: wikimedia.py
